kubernetes/cluster/privacy/keeper/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keeper
  namespace: privacy
  labels:
    app.kubernetes.io/name: keeper
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: keeper.brhd.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keeper
                port:
                  name: http
  tls:
    - hosts:
        - keeper.brhd.io
